LPS-57193 - Fixing z-index issue

--- a/modules/apps/control-menu/control-menu-web/src/META-INF/resources/css/main.scss
+++ b/modules/apps/control-menu/control-menu-web/src/META-INF/resources/css/main.scss
@@ -12,6 +12,7 @@
 		position: fixed;
 		text-align: center;
 		width: 100%;
+		z-index: 500;
 
 		li {
 			display: inline-block;
